@@ -9,6 +9,8 @@
 #define _WX_QT_MENUITEM_H_
 
 #include "wx/menuitem.h"
+#include "wx/bitmap.h"
+
 class QAction;
 
 class WXDLLIMPEXP_FWD_CORE wxBitmap;
@@ -33,14 +35,15 @@ public:
     virtual void Check(bool check = true);
     virtual bool IsChecked() const;
 
-    void SetBitmap(const wxBitmap& bitmap);
-    const wxBitmap& GetBitmap() const;
+    virtual void SetBitmap(const wxBitmap& bitmap);
+    virtual const wxBitmap& GetBitmap() const { return m_bitmap; };
 
     virtual QAction *GetHandle() const;
 
 private:
     // Qt is using an action instead of a menu item.
     QAction *m_qtAction;
+    wxBitmap m_bitmap;
 
     wxDECLARE_DYNAMIC_CLASS( wxMenuItem );
 };
