@@ -166,6 +166,7 @@ wxOSX:
 wxQt:
 
 - Fix menu bar background colour (Naser Buhamad).
+- Add support for bitmaps in menu items (Igor Korot).
 
 
 3.1.1: (released 2018-02-19)
